    - Authorities now include server versions in networkstatus. This adds
      about 2% to the side of compressed networkstatus docs, and allows
      clients to tell which servers support BEGIN_DIR and which don't.
      The implementation is forward-compatible with a proposed future
      protocol version scheme not tied to Tor versions.

  o Minor features:
    - Start using the state file to store bandwidth accounting data:
      the bw_accounting file is now obsolete. We'll keep generating it
      for a while for people who are still using 0.1.2.4-alpha.
    - Try to batch changes to the state file so that we do as few
      disk writes as possible while still storing important things in
      a timely fashion.
    - Ongoing work on eventdns infrastructure: add dns server and ipv6
      support.
    - Make PIDFile work on Windows (untested).
    - Add internal descriptions for a bunch of configuration options:
      accessible via controller interface and in comments in saved
      options files.
    - Reject *:563 (NTTPS) in the default exit policy. We already reject
      NNTP by default, so this seems like a sensible addition.
    - Authorities do not recommend exits as guards if this would shift
      excess load to the exit nodes.
    - Avoid some inadvertent info leaks by making clients reject hostnames
      with invalid characters. Add an option "AllowNonRFC953Hostnames"
      to disable this behavior, in case somebody is running a private
      network with hosts called @, !, and #.
    - Add a new address-spec.txt document to describe our special-case
      addresses: .exit, .onion, and .noconnnect.
    - Add a maintainer script to tell us which options are missing
      documentation.
    - Remove some options that have been deprecated since at least 0.1.0.x:
      AccountingMaxKB, LogFile, DebugLogFile, LogLevel, and SysLog.  Use
      AccountingMax instead of AccountingMaxKB; use Log to set log options.